tests/snapshots/map_types-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
empty_map=&
int_key_map[1]=one&
int_key_map[2]=two&
string_map[key1]=value1&
string_map[key2]=value2&
struct_value_map[first][a]=10&
struct_value_map[first][b]=20&
struct_value_map[second][a]=30&
struct_value_map[second][b]=40
