tests/snapshots/map_types@query.snap
---
source: tests/test_roundtrip.rs
description: "MapTypes { empty_map: {}, string_map: {\"key1\": \"value1\", \"key2\": \"value2\"}, int_key_map: {1: \"one\", 2: \"two\"}, struct_value_map: {\"first\": FlatStruct { a: 10, b: 20 }, \"second\": FlatStruct { a: 30, b: 40 }} }"
---
empty_map=&
int_key_map[1]=one&
int_key_map[2]=two&
string_map[key1]=value1&
string_map[key2]=value2&
struct_value_map[first][a]=10&
struct_value_map[first][b]=20&
struct_value_map[second][a]=30&
struct_value_map[second][b]=40
