tests/snapshots/mixed_enum_representations@form.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
external%5BStruct%5D%5Ba%5D=ext&
external%5BStruct%5D%5Bb%5D=false&
internal%5Btype%5D=Struct&
internal%5Bvalue%5D=int&
adjacent%5Bt%5D%5BNewtype%5D&
adjacent%5Bc%5D=adj&
untagged=100&
optional_enum%5BUnit%5D
