tests/snapshots/nested_helpers.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
data[0][name]=item1&
data[0][tags]=tag1,tag2&
data[1][name]=item2&
data[1][tags]=tag3,tag4,tag5
